Make PWA ready #214

--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/icon-144.png" />
 		<meta name="viewport" content="width=device-width" />
+
+		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="manifest.json" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="BEST LAP" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.png" sizes="192x192" />
+
 		%sveltekit.head%
 	</head>
 	<body>
