--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 
 		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="manifest" href="manifest.json" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="BEST LAP" />
