Convert png files to avif files #1257

--- a/src/app.html
+++ b/src/app.html
@@ -2,16 +2,16 @@
 <html lang="en" data-theme="">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/icon-144.png" />
+		<link rel="icon" href="%sveltekit.assets%/icon-144.avif" />
 		<meta name="viewport" content="width=device-width" />
 
-		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
+		<link rel="icon" href="%sveltekit.assets%/icon-192.avif" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="BEST LAP" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.png" sizes="192x192" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.avif" sizes="192x192" />
 
 		%sveltekit.head%
 	</head>
