Pass lighthouse pwa tests #1277

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,8 @@
 		<meta name="apple-mobile-web-app-title" content="BEST LAP" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.avif" sizes="192x192" />
 
+		<meta name="theme-color" content="#0F172A" />
+
 		%sveltekit.head%
 	</head>
 	<body>
